Fixed button spacing

--- a/src/frontend/css/frontend.css
+++ b/src/frontend/css/frontend.css
@@ -216,8 +216,6 @@ h3 {
 }
 
 .button {
-	float: left;
-	min-width: 150px;
 	max-width: 250px;
 	margin: 1em;
 	border: none;
@@ -229,13 +227,14 @@ h3 {
 	-webkit-backface-visibility: hidden;
 	-moz-osx-font-smoothing: grayscale;
 	vertical-align: middle;
+
 }
 .button:focus {
 	outline: none;
 }
 .button.quiButton {
 	width: 90px;
-	height: 50px;
+	height: 40px;
 	min-width: 0;
 	color: #000000;
 	-webkit-transition: color 0.3s;
@@ -287,10 +286,9 @@ h3 {
     0 6px 0 #b8dbb3,
     0 8px 6px rgba(0,0,0,.3);
 }
-
-
-
-
+#generateQuizHolder{
+	text-align: center;
+}
 #notes-list ol {
     /*list-style-type: circle;*/
     list-style-type: none;
